--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ hr{border:0;border-top:1px solid var(--line);margin:12px 0}
 
 <section class="block" aria-label="Impact tracker">
   <div class="panel">
-    <h2 style="margin:0 0 6px">Impact Tracker (optional live embed)</h2>
-    <div class="hint">Publish a Google Sheet or chart and paste its <em>published</em> URL into the code to show live numbers here.</div>
+    <h2 style="margin:0 0 6px">Impact Tracker</h2>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSFaeGFD5VbYHWKILOPxiyFWO_sPM8ruKMhVBmiODtOkHfLra7ZZWSXw1yYdAOJj3kd4xiakTXROrLd/pubhtml" width="100%" height="100%" frameborder="0"></iframe>
     <div id="embedHolder" style="aspect-ratio:16/9;background:#0a0a0a;border:1px solid var(--line);border-radius:12px;display:grid;place-items:center;margin-top:8px;padding:8px;text-align:center">
       <div>
         <p style="margin:0 0 6px">Embed your live Google Sheet here.</p>
